# advent_of_code_2020

./: .gitignore  Cargo.toml  t.txt
benches/: ex11_benchmark.rs  ex13_benchmark.rs  ex15_benchmark.rs  ex17_benchmark.rs  ex20_benchmark.rs  ex23_benchmark.rs  ex24_benchmark.rs  ex25_benchmark.rs  ex6_benchmark.rs  ex7_benchmark.rs
data_files/: ex10_error.txt  ex12_invalid.txt  ex12_mydata.txt  ex18.txt  ex2.txt  ex3.txt  ex3_given_example.txt  ex4.txt  ex9_no_invalid.txt
src/: ex1.rs  ex10.rs  ex11.rs  ex12.rs  ex13.rs  ex14.rs  ex14b.rs  ex15.rs  ex15b.rs  ex15c.rs  ex16.rs  ex17.rs  ex17a.rs  ex17other.rs  ex18.rs  ex19.rs  ex19petgraph.rs  ex2.rs  ex20.rs  ex20b.rs  ex21.rs  ex22.rs  ex23.rs  ex23b.rs  ex24.rs  ex24pdo.rs  ex25.rs  ex25b.rs  ex3.rs  ex4.rs  ex5.rs  ex6.rs  ex7.rs  ex8.rs  ex9.rs  lib.rs  main.rs
