[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy-regex = "2.3.0"
thiserror = "1.0.30"
anyhow = "1.0.56"
aoc_utils = { path = "./aoc_utils"}

[dev-dependencies]
test-case = "2.0.0"
criterion = "0.3.5"