[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "^1"
lazy-regex = "^2.3.0"
thiserror = "^1.0.30"
anyhow = "^1.0.56"
text_io = "^0.1.10"
aoc_utils = { path = "./aoc_utils"}
fnv = "^1.0"
petgraph = "^0.6.2"

[dev-dependencies]
test-case = "^2.0.0"
criterion = "^0.3.5"

[[bench]]
name = "ex23benchmark"
path = "benches/ex23_benchmark.rs"
harness = false
